--- a/www/css/index.css
+++ b/www/css/index.css
@@ -20,6 +20,10 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
+html {
+    height: 100%;
+}
+
 body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
@@ -115,6 +119,45 @@ h1 {
     -webkit-animation:fade 3000ms infinite;
 }
 
+.gpsContainer {
+    height: 93%;
+}
+
+.overrideMapTop {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 15;
+}
+
+.noMarginRight {
+    margin-right: 0px !important;
+}
+
+.btnManagement {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+}
+
+.chronometre {
+    background-color: #FFF;
+    opacity: 0.95;
+    padding: 15px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 #map {
     height: 400px;
+    height: 100%;
+}
+
+.btnGps {
+    width: 100%;
+    border-radius: 0px !important;
+    opacity: 0.95;
+    padding: 20px !important;
+    font-size: 20px !important;
+    font-weight: bold;
 }
